--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2003-01-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.in: Remove logic to insert /usr/local/ in include and lib
+	path.  Remove configure switch for in-code EPSG tables since that 
+	option is broken for now.
+
 2002-12-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* cpl_csv.c: rewritten to support in memory caching of tables, and
