--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2003-01-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.in: fixed some stuff with last changes.  The --with-libtiff
+	option can now be used to give a base directory with libtiff installed
+	into /include and /lib directories under that.
+
 2003-01-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.in: Remove logic to insert /usr/local/ in include and lib
