--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,9 @@
 2003-01-15  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* Preparing 1.2.0 libgeotiff release.
+
+	* removed libtiff_private contents.
+
 	* geotiff.h: added LIBGEOTIFF_VERSION macro.
 
 	* geo_normalize.c/h: Added GTIFFreeMemory() for freeing memory
