Added dist-clean target in bin/Makefile.in
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@508 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Makefile.in, bin/Makefile.in: added dist-clean target.
+
 2003-01-15  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Preparing 1.2.0 libgeotiff release.
