--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* cpl_csv.c: changed CSVFilename() to search for pcs.csv, not
+	horiz_cs.csv.
+	
 2003-01-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Makefile.in, bin/Makefile.in: added dist-clean target.
