--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,8 @@
 2003-01-20  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* cpl_csv_incode.c: fixed bug CSVGetField() which could cause
+	a crash if a missing record was requested.
+
 	* cpl_csv_incode.c, Makefile.in, csv/*: Reincorporated "incode"
 	support as per patches from Derrick. 
 
