--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2003-01-26  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/geotifcp.c: fixed bug if the metadata file specified does not
+	exist.
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=258
+
 2003-01-20  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* cpl_csv_incode.c: fixed bug CSVGetField() which could cause
