--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Default dfInDegrees in GTIFAngleToDD().
+
 2003-01-26  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/geotifcp.c: fixed bug if the metadata file specified does not
