--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-25  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/Makefile.in: Replace $< with the object file names.  Apparently
+	this makes the makefile be compatible with Sun's make.
+
 2003-01-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: Default dfInDegrees in GTIFAngleToDD().
