*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@533 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/Makefile: added -L${libdir} before $(LIBS) per suggestion by
+	Tommy Andreassen.
+
 2003-02-25  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/Makefile.in: Replace $< with the object file names.  Apparently
