*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@537 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_new.c: Fixed bug that can corrupt memory when an invalid 
+	GeoTIFF file with a zero length ascii parms strings is read (like 
+	bruce.tif).
+
 2003-06-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/Makefile: added -L${libdir} before $(LIBS) per suggestion by
