various hacks to support improperly terminated asciiparms
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@551 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_new.c: various hacks so that with improperly terminated ascii
+	parameters such as "34737 (0x87b1) ASCII (2) 9<Mercator\0>" will 
+	still work.  
+
 2003-07-08  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c, geo_print.c, geo_set.c, geo_tiffp.c, geo_trans.c, 
