--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -2,7 +2,7 @@
 
 	* geo_new.c: various hacks so that with improperly terminated ascii
 	parameters such as "34737 (0x87b1) ASCII (2) 9<Mercator\0>" will 
-	still work.  
+	still work.  eg. 1164-0.tif
 
 2003-07-08  Frank Warmerdam  <warmerdam@pobox.com>
 
