--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_print.c: fixed PrintKey() to work for constant names longer
+	than the message buffer.  
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=399
+
 2003-09-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_new.c: various hacks so that with improperly terminated ascii
