--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_print.c: fixed bug with long message text with embedded newlines
+	which happen to straddle the end of the message buffer when expanded
+	with escape characters.  (as reported by Leica - not in bugzilla).
+
 2003-09-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_print.c: fixed PrintKey() to work for constant names longer
