--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,13 @@
+2004-03-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* cpl_csv_incode.c: include dummy version on CPLReadParseLine().
+
+	* Reconvert the EPSG 6.5 files to C.
+
+	* Wrote csv/csv2c.py for converting .csv file to .c. 
+
+	* Capture EPSG 6.5 csv files.
+
 2003-10-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_print.c: fixed bug with long message text with embedded newlines
