Added some error trapping when trying to open preferences file for writing.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@596 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-27  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_new.c, geo_write.c, geo_print.c: Make it possible to 
+	create a GTIF information object *without* an associated TIFF *. 
+
 2004-03-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* cpl_csv_incode.c: include dummy version on CPLReadParseLine().
