--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-29  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* xtiffio.h: Avoid including cpl_serv.h, moved to geo_tiffp.h 
+	so that only libgeotiff code will end up seeing cpl_serv defines.
+
 2004-04-27  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_new.c, geo_write.c, geo_print.c: Make it possible to 
