--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+==============================================================================
+
+2004-04-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Prepare 1.2.2 release.
+
 2004-04-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* xtiffio.h: Avoid including cpl_serv.h, moved to geo_tiffp.h 
@@ -40,6 +46,8 @@
 
 	* geo_normalize.c, geo_print.c, geo_set.c, geo_tiffp.c, geo_trans.c, 
 	geo_write.c, geotiff_proj4.c: fix various warnings.
+
+==============================================================================
 
 2003-06-20  Frank Warmerdam  <warmerdam@pobox.com>
 
