--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: fallback to using gdal_datum.csv if datum.csv 
+	not found.
+
 ==============================================================================
 
 2004-04-30  Frank Warmerdam  <warmerdam@pobox.com>
