*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@614 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-09  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: added 9122 as a simple degree alias in 
+	GTIFGetUOMAngleInfo().
+
 2004-06-07  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: fallback to using gdal_datum.csv if datum.csv 
