--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_print.c: fixed serious bug with reporting large numbers of
+	GCPs.  Patch from Oliver Colin (ESA). 
+
 2004-07-09  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: added 9122 as a simple degree alias in 
@@ -541,5 +546,3 @@ March 18
 	configure script (using autoconf). 
 
 -- 1.02 Release (1995 or so) 	
-
-	
