*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@634 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.in: bug 649 - add LDFLAGS into LIBS, and ensure we
+	can link against libproj.so even if no libproj.a is provided.
+
 2004-10-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_print.c: fixed serious bug with reporting large numbers of
