bug 698: GTIFGetGCSInfo should not fail on missing pm if pm info not req.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@637 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2004-12-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: GTIFGetGCSInfo() changed to work even if an 
+	illegal PM code encountered ... as long as pm info not requested.
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=698
+
 2004-11-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.in: bug 649 - add LDFLAGS into LIBS, and ensure we
