--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/Makefile.in: fixed problem in setting libdir.
+
 2004-12-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: GTIFGetGCSInfo() changed to work even if an 
