added darwin/macosx shared library support
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@640 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,8 @@
 2004-12-16  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* aclocal.m4, Makefile.in: added MacOSX/Darwin related logic for
+	shared libraries.
+
 	* bin/Makefile.in: fixed problem in setting libdir.
 
 2004-12-01  Frank Warmerdam  <warmerdam@pobox.com>
