--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: check for ProjFalseOriginEastingGeoKey and
+	ProjFalseOriginNorthingGeoKey in GTIFFetchProjParms().  Otherwise
+	we miss the false easting/northing for LCC2SP when reading with
+	normalization.
+
 2004-12-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* aclocal.m4, Makefile.in: added MacOSX/Darwin related logic for
