added cylindricalequalarea support
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@659 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,11 @@
+2005-03-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geotiff_proj4.c: added CT_CylindricalEqualArea support.
+
+	* geo_normalize.c: Added CT_CylindricalEqualArea support.
+
+	* geo_ctrans.c: added CT_CyldricalEqualArea.
+
 2005-02-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: check for ProjFalseOriginEastingGeoKey and
