--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: If a zero inverse flattening is encountered, 
+	interprete this as implying a semiminor axis equal to the semimajor.
+
 2005-03-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geotiff_proj4.c: added CT_CylindricalEqualArea support.
