--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Makefile.in: Include @C_PIC@ in CFLAGS so -fPIC will be used.
+
 2005-03-15  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: If a zero inverse flattening is encountered, 
