prep for 1.2.3 release
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@701 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Issuing libgeotif 1.2.2 release.
+
 2005-08-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Makefile.in: Include @C_PIC@ in CFLAGS so -fPIC will be used.
