If the ascii parameters list is too short for the declared size of an ascii parameter, but it doesn't start off the end of the available string then just trim the length.  This is to make the ESRI sample data file 34105h2.tif work properly.  I wish we had a way of issuing warnings!
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@719 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,11 @@
+2006-06-26  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_new.c: If the ascii parameters list is too short for the declared
+	  size of an ascii parameter, but it doesn't start off the end of the
+          available string then just trim the length.  This is to make the
+          ESRI sample data file 34105h2.tif work properly.  I wish we had
+          a way of issuing warnings!
+
 ==============================================================================
 
 2006-03-02  Frank Warmerdam  <warmerdam@pobox.com>
