--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/Makefile.in: Fix prefix handling.
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=1245
+
 2006-06-26  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_new.c: If the ascii parameters list is too short for the declared
