--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Makefile.in: Avoid running configure or autoconf automatically.
+	It is nothing but heartache.
+
 2006-07-20  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/Makefile.in: Fix prefix handling.
