--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Upgraded csv files to EPSG 6.11.1.
+
 2006-10-13  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Makefile.in: Avoid running configure or autoconf automatically.
