dont report hemispheres and signs for decimal degree reporting
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@736 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/listgeo.c: Don't report hemispheres *and* signs when using -d.
+
 2006-11-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* xtiff.c, xtiffio.h: Made XTIFFInitialize() public so that 
