--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Makefile.in: Fix Progs dependency so parallel makes work properly.
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=1475
+
 2006-12-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/listgeo.c: Don't report hemispheres *and* signs when using -d.
