--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geotiff_proj4.c, geo_normalize.c: Added support for new zealand
+	map grid per http://bugzilla.remotesensing.org/show_bug.cgi?id=1519
+
 2007-02-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Makefile.in: Fix Progs dependency so parallel makes work properly.
