--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-05  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Modified GTIFGetUOMLengthInfo() (for normalization) to have
+	built in known values for foot and us survey foot.
+
 2007-03-13  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geotiff_proj4.c, geo_normalize.c: Added support for new zealand
