fix incode epsg info
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@743 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/README
+++ b/geotiff/libgeotiff/README
@@ -82,12 +82,12 @@ Common Configuration Issues:
    % make
 
  o If you want to use EPSG tables compiled into the code, use the
-   --with-incode-epsg configure switch.  It will make the library and
+   --enable-incode-epsg configure switch.  It will make the library and
    resulting executables substantially larger (~600K), but will avoid any 
    configuration issues with finding the .csv files. 
 
    % rm config.status
-   % ./configure --with-incode-epsg
+   % ./configure --enable-incode-epsg
    % make clean
    % make
 
