--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,5 +1,11 @@
 2007-07-20  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* Prepare libgeotiff 1.2.4 release.
+
+	* csv/*.csv,*.c: Upgrade to EPSG 6.13.  Avoid applying pcs.override.csv
+	and gcs.override.csv to pcs.csv and gcs.csv as this sort of dataset
+	change is discouraged by the EPSG folks.
+
 	* geo_normalize.c: Pre-search pcs.override.csv and gcs.override.csv.
 
 	* cpl_csv_incode.c: Handle unexpected .csv files, and missing
