avoid memory leak in case of error
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@751 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-02  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_new.c: avoid memory leak in case of error.
+
 2007-07-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Issue libgeotiff 1.2.4 release.
