--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Add EPSG 9822 (Albers Equal Area) support from EPSG
+
 2007-10-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_new.c: avoid memory leak in case of error.
