Ignore GCS values less than 1 as a sanity measure
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@753 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-31  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Ignore GCS values less than 1 as seen in the ENVI
+	generated file reported in:
+	  http://trac.osgeo.org/gdal/ticket/2183
+
 2007-12-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: Add EPSG 9822 (Albers Equal Area) support from EPSG
