--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-09  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_simpletags.{c,h}, geo_new.c, geotiff.h: Introduce "simple tags"
+	API for parsing geotiff tags that don't come via libtiff.  Mostly for
+	use of liblas. 
+
 2008-01-31  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: Ignore GCS values less than 1 as seen in the ENVI
