--- a/geotiff/libgeotiff/ChangeLog
+++ b/geotiff/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Prepare 1.2.5 release.
+
+	* csv/*.csv: upgraded to EPSG 6.17.
+
 2008-07-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: Fix potential buffer overflow in GTIFAngleStringToDD
