Prepare for 1.4.3 release
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@2828 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/libgeotiff/ChangeLog
+++ b/libgeotiff/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-07 Even Rouault <even dot rouault at spatialys dot com>
+
+	* Prepare for 1.4.3	
+
 2018-05-23 Even Rouault <even dot rouault at spatialys dot com>
 
 	* geo_set.c: when rewriting a ASCII key with a string value longer than
