--- a/libgeotiff/docs/index.dox
+++ b/libgeotiff/docs/index.dox
@@ -13,7 +13,6 @@ LIBGEOTIFF
 <li> GTIFKeySet(): Write GeoTIFF GeoKey.
 <li> GTIFNew(): Create GeoTIFF access handle.
 <li> GTIFWriteKeys(): Flush GeoTIFF Keys.
-<li> SetCSVFilenameHook(): Override CSV File Searching.
 <li> XTIFFClose(): Close GeoTIFF file.
 <li> XTIFFOpen(): Open GeoTIFF file.
 </ul>
@@ -48,7 +47,7 @@ routines, if code values are not required.<p>
 <li> geokeys.h:   defines all valid GEOTIFF GeoKeys.<p>
 
 <li> geo_normalize.h: Defined all functions and structures related
-to normalization of GeoTIFF information based on CSV files.<p>
+to normalization of GeoTIFF information based on PROJ database.<p>
 
 </ul>
 
@@ -58,9 +57,7 @@ All the source code in this toolkit are either in the public domain, or under
 an X style license.  In any event it is all considered to be free to use
 for any purpose (including commercial software).  No credit is required 
 though some of the code requires that the specific source code modules 
-retain their existing copyright statements.  The CSV files, and other tables
-derived from the EPSG coordinate system database are also free for commercial
-and non-commercial use.  In particular, no part of this code is 
+retain their existing copyright statements. In particular, no part of this code is 
 <i>copyleft</i>, nor does it imply any requirement for users to disclose
 this or their own source code.<p>
 
