geo_print.c: fix wrong test in DefaultRead() that caused erroenous error message to be emitted.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@2830 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/libgeotiff/ChangeLog
+++ b/libgeotiff/ChangeLog
@@ -1,3 +1,9 @@
+2018-12-11 Even Rouault <even dot rouault at spatialys dot com>
+
+	* geo_print.c: fix wrong test in DefaultRead() that caused erroenous
+	error message to be emitted.
+	* Prepare for 1.4.3RC2
+
 2018-12-07 Even Rouault <even dot rouault at spatialys dot com>
 
 	* Prepare for 1.4.3	
