--- a/libgeotiff/NEWS
+++ b/libgeotiff/NEWS
@@ -1,3 +1,8 @@
+libgeotiff 1.5.1
+----------------
+
+* re-add #define SetCSVFilenameHook gtSetCSVFilenameHook for compatibility with GDAL 2.4.x
+
 libgeotiff 1.5.0
 ----------------
 
