Prepare for libgeotiff 1.6.0 release

--- a/libgeotiff/NEWS
+++ b/libgeotiff/NEWS
@@ -1,3 +1,26 @@
+libgeotiff 1.6.0
+----------------
+
+New features:
+* Add support for OGC GeoTIFF 1.1
+* Expose GTIFGetPCSInfoEx(), GTIFGetProjTRFInfoEx(), GTIFGetGCSInfoEx(), GTIFGetDatumInfoEx(), GTIFGetEllipsoidInfoEx(), GTIFGetPMInfoEx(), GTIFGetUOMLengthInfoEx() and GTIFGetUOMAngleInfoEx() so that users can specify their own PROJ context
+* Add GTIFKeyGetASCII(), GTIFKeyGetSHORT() and GTIFKeyGetDOUBLE() as safer variants of GTIFKeyGet() with type checking
+* autotools build: enable build in a separate tree from source (#37) (fixes #28)
+* Use pkg-config for libtiff detection
+
+Bug fixes:
+* GTIFDecToDMS(): fix rounding issue (refs #16)
+* geo_names.c: Silence warning in GetNameFromDatabase
+* cpl_serv.h: add parenthesis in macro definitions
+* Fix spelling errors
+* geo_normalize.c: set UOMLength from GeogLinearUnits (for geocentic CRS) (GDAL #1595)
+* testlistgeo: remove hardcoded path in test output (fixes https://github.com/OSGeo/libgeotiff/issues/16#issuecomment-502267406)
+* Adapt test script for PROJ 6.2 EPSG database (fixes #22)
+* Use unix EOL for cmake related files (fixes #14)
+* configure.ac: drop dead code
+* geo_normalize.c: avoid look up of user-defined geokeys that cause PROJ warnings (fixes GDAL #2321)
+* listgeo: fix corner coordinates for images with RasterPixelIsPoint (#36)
+
 libgeotiff 1.5.1
 ----------------
 
